--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
     "description": "A website for processing pokemon images via AWS Lambda.",
     "main": "app.js",
     "scripts": {
-      "start": "node app.js"
+        "start": "node app.js"
     },
     "author": "Harry Wang",
     "license": "MIT",
     "dependencies": {
-      "aws-sdk": "^2.1360.0",
-      "body-parser": "^1.20.2",
-      "ejs": "^3.1.9",
-      "express": "^4.18.2",
-      "multer": "^1.4.5-lts.1"
+        "aws-sdk": "^2.1360.0",
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.4.7",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "multer": "^1.4.5-lts.1"
     }
-  }
-  
+}
