--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "author": "Harry Wang",
     "license": "MIT",
     "dependencies": {
-        "aws-sdk": "^2.1360.0",
+        "@aws-sdk/client-s3": "^3.705.0",
+        "@aws-sdk/lib-storage": "^3.705.0",
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.7",
         "ejs": "^3.1.9",
