--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.705.0",
         "@aws-sdk/lib-storage": "^3.705.0",
+        "axios": "^1.7.9",
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.7",
         "ejs": "^3.1.9",
